--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+aniso8601==8.0.0
 astroid==2.3.3
 click==7.1.1
 colorama==0.4.3
 Flask==1.1.2
 Flask-Cors==3.0.8
+Flask-RESTful==0.3.8
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -10,6 +12,7 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pylint==2.4.4
+pytz==2019.3
 six==1.14.0
 tornado==6.0.4
 Werkzeug==1.0.1
